fix(Exercise08, Exercise09): adjust Contact component form to dark mode

--- a/src/exercises/Exercise08/components/Contact/style.module.css
+++ b/src/exercises/Exercise08/components/Contact/style.module.css
@@ -104,12 +104,7 @@ iframe {
   .form > input,
   .form > textarea {
     background-color: #fff;
-    color: #fff;
-  }
-
-  .form > input::placeholder,
-  .form > textarea::placeholder {
-    color: #fff;
+    color: #03031b;
   }
 }
 
